[package]
name = "spb-web-server"
version = "0.1.0"
authors = ["ethanzhang"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.2"
actix-files = "0.1.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"
ip-addr-op = { path = "../ip-addr-op"}
iproute = { path = "../iproute" }
spb-serial-data-parser = { path = "../spb-serial-data-parser"}
spb-data-service = { path = "../spb-data-service" }
ipnetwork = "0.14"
rumqtt = { path = "../rumqtt" }
rand = "0.6"
crossbeam-channel = "0.3"
publicsuffix = { version = "1.5", default-features = false }

spb-config = { path = "../spb-config"}
