[package]
name = "spb-web-server"
version = "0.1.0"
authors = ["ethanzhang"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-files = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"
ip-addr-op = { git = "https://github.com/lambdabear/ip-addr-op.git" }
iproute = { git = "https://github.com/lambdabear/iproute.git" }
ipnetwork = "0.14"
rand = "0.6"
crossbeam-channel = "0.3"
publicsuffix = { version = "1.5", default-features = false }

spb-config = { git = "https://github.com/lambdabear/SPB-config.git" }
